<resources>


    <string name="app_name">D4U</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_us_make_app_better">Let us make app better</string>
    <string name="to_correct_a_wrong_info">to correct a wrong info</string>
    <string name="latest_info">We regularly updates our contents to provide you the latest information</string>
    <string name="profile">Profile</string>


    <!--    <string name="app_name">Drawer with bottom navigation</string>-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="about_us">About us</string>
    <string name="settings">Settings</string>
    <string name="terms_condition">Terms and Condition</string>
    <string name="i_would_like">I would like :</string>
    <string name="outlets">Outlets</string>
    <string name="price">Price</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="loading">Loading...</string>
    <string name="products">Products</string>
    <string name="offers">Offers</string>
</resources>
