<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/corner_white_shape"
    tools:context=".FilterBottomSheetFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgview_close"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:src="@drawable/ic_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtview_outlets_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/outlets"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgview_close" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_outlets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtview_outlets_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/clear"
        android:textColor="@color/purple_800"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgview_close" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtview_price_clear"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/clear"
        android:textColor="@color/purple_800"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerview_outlets" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtview_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerview_outlets" />

    <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
        android:id="@+id/range_price"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        app:absoluteMaxValue="100"
        app:absoluteMinValue="0"
        app:layout_constraintTop_toBottomOf="@id/txtview_price_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reset"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_margin="10dp"
        android:background="@drawable/corner_violet_shape"
android:textColor="@color/white"
        app:layout_constraintRight_toLeftOf="@id/btn_done"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/range_price" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_done"
        android:textColor="@color/white"
        android:background="@drawable/corner_violet_shape"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
app:layout_constraintLeft_toRightOf="@id/btn_reset"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/range_price" />
</androidx.constraintlayout.widget.ConstraintLayout>