<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/walpaper"
    tools:context=".fragment.FeedBackFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtview_let_make_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/let_us_make_app_better"
        android:textColor="@color/purple_800"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/txtview_let_make_app">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtview_would_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_would_like"
            android:textColor="@color/purple_800"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtview_correct_wrong_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/ic_down_arrow"
            android:drawablePadding="20dp"
            android:gravity="center"
            android:text="@string/to_correct_a_wrong_info"
            android:textColor="@color/black"

            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtview_would_like" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtview_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/drawable_edittext"
            android:gravity="center_vertical"
            android:hint="Name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/txtview_correct_wrong_info" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtview_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/drawable_edittext"
            android:gravity="center_vertical"
            android:hint="Email"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/txtview_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtview_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/drawable_edittext"
            android:gravity="center_vertical"
            android:hint="Phone"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/txtview_email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtview_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/drawable_edittext"
            android:gravity="left"
            android:hint="Details"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:minLines="6"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/txtview_phone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/purple_800"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/txtview_details" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/latest_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_submit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_800"
        android:gravity="center"
        android:padding="15dp"
        android:text="For Technical support 24/7 support@gmail.com"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>